about, support, contact styling done?!

--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,12 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="/favicon.png" />
-		<!-- <link rel="stylesheet" href="node_modules/svelte-material-ui/bare.css" /> -->
 		<link rel="stylesheet" href="/smui.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Catamaran:wght@700&family=Catamaran:wght@400&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">  
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
