get "latest" to expand, weight topic terms viz

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Catamaran:wght@700&family=Catamaran:wght@400&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">  
+		<link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Catamaran:wght@700&family=Catamaran:wght@400&family=Catamaran:wght@600&family=Catamaran:wght@100&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">  
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
