update html header description

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Nabu" />
+		<meta name="description" content="Nabu: Tools to identify and understand bias in the news." />
 		<title>Nabu</title>
 		<script defer data-domain="nabu.news" src="https://plausible.io/js/plausible.js"></script>
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
